crates/obzenflow_runtime/tests/compile_fail/effects_emit_outside_output.stderr
error[E0277]: fact `Undeclared` is not declared in this handler's `Output` set
  --> tests/compile_fail/effects_emit_outside_output.rs:24:13
   |
24 |     fx.emit(Undeclared).await.unwrap();
   |             ^^^^^^^^^^ `Undeclared` cannot be emitted by this handler
   |
help: the trait `OutputAllowsFact<Declared, MemberAfter<_>>` is not implemented for `Undeclared`
  --> tests/compile_fail/effects_emit_outside_output.rs:16:1
   |
16 | struct Undeclared;
   | ^^^^^^^^^^^^^^^^^
   = note: add `Undeclared` to the canonical stage arrow, then mirror the arrow's flat fact set in the handler's `Output`, or remove this `emit` call (FLOWIP-120z)
note: required by a bound in `Effects::<Output, AllowedEffects>::emit`
  --> src/effects/typed.rs
   |
   |     pub async fn emit<T, At>(&mut self, fact: T) -> Result<(), EffectError>
   |                  ---- required by a bound in this associated function
   |     where
   |         T: TypedPayload + OutputAllowsFact<Output, At>,
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Effects::<Output, AllowedEffects>::emit`

error[E0277]: fact `Undeclared` is not declared in this handler's `Output` set
  --> tests/compile_fail/effects_emit_outside_output.rs:24:5
   |
24 |     fx.emit(Undeclared).await.unwrap();
   |     ^^^^^^^^^^^^^^^^^^^ `Undeclared` cannot be emitted by this handler
   |
help: the trait `OutputAllowsFact<Declared, MemberAfter<_>>` is not implemented for `Undeclared`
  --> tests/compile_fail/effects_emit_outside_output.rs:16:1
   |
16 | struct Undeclared;
   | ^^^^^^^^^^^^^^^^^
   = note: add `Undeclared` to the canonical stage arrow, then mirror the arrow's flat fact set in the handler's `Output`, or remove this `emit` call (FLOWIP-120z)
note: required by a bound in `Effects::<Output, AllowedEffects>::emit`
  --> src/effects/typed.rs
   |
   |     pub async fn emit<T, At>(&mut self, fact: T) -> Result<(), EffectError>
   |                  ---- required by a bound in this associated function
   |     where
   |         T: TypedPayload + OutputAllowsFact<Output, At>,
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Effects::<Output, AllowedEffects>::emit`

error[E0277]: fact `Undeclared` is not declared in this handler's `Output` set
  --> tests/compile_fail/effects_emit_outside_output.rs:24:25
   |
24 |     fx.emit(Undeclared).await.unwrap();
   |                         ^^^^^ `Undeclared` cannot be emitted by this handler
   |
help: the trait `OutputAllowsFact<Declared, MemberAfter<_>>` is not implemented for `Undeclared`
  --> tests/compile_fail/effects_emit_outside_output.rs:16:1
   |
16 | struct Undeclared;
   | ^^^^^^^^^^^^^^^^^
   = note: add `Undeclared` to the canonical stage arrow, then mirror the arrow's flat fact set in the handler's `Output`, or remove this `emit` call (FLOWIP-120z)
note: required by a bound in `Effects::<Output, AllowedEffects>::emit`
  --> src/effects/typed.rs
   |
   |     pub async fn emit<T, At>(&mut self, fact: T) -> Result<(), EffectError>
   |                  ---- required by a bound in this associated function
   |     where
   |         T: TypedPayload + OutputAllowsFact<Output, At>,
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Effects::<Output, AllowedEffects>::emit`
